@@ -57,7 +57,6 @@ setup(name='plone.dexterity',
           'zope.publisher',
           'zope.schema',
           'zope.security',
-          'zope.app.content',
           'zope.filerepresentation>=3.6.0',
           'zope.size',
           'ZODB3',
